--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -27,7 +27,7 @@
             </div>
         </header>
         
-        <section class="grid-test">
+        <!-- <section class="grid-test">
             <div class="row">
                 <div class="col-1-of-2">
                     Col 1 of 2
@@ -74,7 +74,7 @@
             </div>
 
 
-        </section>
+        </section> -->
 
     </body>
 </html>
