--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -26,6 +26,11 @@
                 <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
             </div>
         </header>
+        <main>
+            <section class="section-about">
+                
+            </section>
+        </main>
         
         <!-- <section class="grid-test">
             <div class="row">
