--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -28,7 +28,9 @@
         </header>
         <main>
             <section class="section-about">
-                
+                <h1 class="heading-secondary">
+                    Exciting tours for adventurous people
+                </h1>
             </section>
         </main>
         
