--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -28,10 +28,19 @@
         </header>
         <main>
             <section class="section-about">
-                <div class="u-center-text">
+                <div class="u-center-text u-margin-bottom-8"> 
+                    <!-- utility class ^ -->
                     <h1 class="heading-secondary">
                         Exciting tours for adventurous people
                     </h1>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        Text content
+                    </div>
+                    <div class="col-1-of-2">
+                        Image composition
+                    </div>
                 </div>
             </section>
         </main>
