adding another uitility class for heading tertiary

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -36,7 +36,14 @@
                 </div>
                 <div class="row">
                     <div class="col-1-of-2">
-                        Text content
+                        <h3 class="heading-tertiary u-margin-bottom-2">You're going to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam omnis amet, molestiae deleniti doloribus sit a officia voluptatem quasi accusamus, beatae minima nobis aliquid distinctio quaerat voluptas ratione voluptatum vel!
+                        </p>
+                        <h3 class="heading-tertiary u-margin-bottom-2">Like adventures like you never have before</h3>
+                        <p class="paragraph">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam omnis amet, molestiae deleniti doloribus sit a officia voluptatem quasi accusamus, beatae minima nobis aliquid distinctio quaerat voluptas ratione voluptatum vel!
+                        </p>
                     </div>
                     <div class="col-1-of-2">
                         Image composition
