--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -28,7 +28,7 @@
         </header>
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-8"> 
+                <div class="u-center-text u-margin-bottom-big"> 
                     <!-- utility class ^ -->
                     <h1 class="heading-secondary">
                         Exciting tours for adventurous people
@@ -36,11 +36,11 @@
                 </div>
                 <div class="row">
                     <div class="col-1-of-2">
-                        <h3 class="heading-tertiary u-margin-bottom-2">You're going to fall in love with nature</h3>
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
                         <p class="paragraph">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam omnis amet, molestiae deleniti doloribus sit a officia voluptatem quasi accusamus, beatae minima nobis aliquid distinctio quaerat voluptas ratione voluptatum vel!
                         </p>
-                        <h3 class="heading-tertiary u-margin-bottom-2">Like adventures like you never have before</h3>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Like adventures like you never have before</h3>
                         <p class="paragraph">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam omnis amet, molestiae deleniti doloribus sit a officia voluptatem quasi accusamus, beatae minima nobis aliquid distinctio quaerat voluptas ratione voluptatum vel!
                         </p>
