--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -42,8 +42,11 @@
                         </p>
                         <h3 class="heading-tertiary u-margin-bottom-small">Like adventures like you never have before</h3>
                         <p class="paragraph">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam omnis amet, molestiae deleniti doloribus sit a officia voluptatem quasi accusamus, beatae minima nobis aliquid distinctio quaerat voluptas ratione voluptatum vel!
+                            Lorem, ipsum dolor sit amet consectetur adipisicing. deleniti doloribus sit a officia voluptatem quasi accusamus, beatae minima nobis.
                         </p>
+
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                       
                     </div>
                     <div class="col-1-of-2">
                         Image composition
