--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -57,9 +57,9 @@
                     </div>
                 </div>
             </section>
-            
-            <section class="section-features">
 
+            <section class="section-features">
+                <i class="icon-basic-world"></i>
             </section>
         </main>
         
