--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -60,6 +60,12 @@
 
             <section class="section-features">
                 <i class="icon-basic-world"></i>
+
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box"></div>
+                    </div>
+                </div>
             </section>
         </main>
         
