--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -59,11 +59,17 @@
             </section>
 
             <section class="section-features">
-                <i class="icon-basic-world"></i>
+                
 
                 <div class="row">
                     <div class="col-1-of-4">
-                        <div class="feature-box"></div>
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary">Explore the world</h3>
+                            <p class="feature-box__text">
+
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
