--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -67,7 +67,7 @@
                             <i class="feature-box__icon icon-basic-world"></i>
                             <h3 class="heading-tertiary">Explore the world</h3>
                             <p class="feature-box__text">
-
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam omnis amet,
                             </p>
                         </div>
                     </div>
