--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -104,6 +104,15 @@
 
                 </div>
             </section>
+
+            <section class="section-tours">
+                <div class="u-center-text u-margin-bottom-big"> 
+                    <h1 class="heading-secondary">
+                        Most popular tours
+                    </h1>
+                </div>
+            </section>
+
         </main>
         
         <!-- <section class="grid-test">
