--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -111,6 +111,19 @@
                         Most popular tours
                     </h1>
                 </div>
+
+                <div class="row">
+                    <div class="col-1-of-3">
+                        Col 1 of 3
+                    </div>
+                    <div class="col-1-of-3">
+                        Col 1 of 3
+                    </div>
+                    <div class="col-1-of-3">
+                        Col 1 of 3
+                    </div>
+                </div>
+
             </section>
 
         </main>
