--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -115,10 +115,14 @@
                 <div class="row">
                     <div class="col-1-of-3">
                         <div class="card">
-                            <div class="card__side">
-                                TEXT
+                            <div class="card__side--front">
+                                Front
+                            </div>
+                            <div class="card__side--back">
+                                Back
                             </div>
                         </div>
+
                     </div>
                     <div class="col-1-of-3">
                         Col 1 of 3
