--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -120,7 +120,7 @@
                                     &nbsp; 
                                 </div>
                                 <h4 class="card__heading">
-                                    Heading
+                                    The Sea Explorer
                                 </h4>
                                 <div class="card__details">
                                    Details     
