--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -123,7 +123,13 @@
                                     <span class="card__heading-span card__heading-span--1">The Sea Explorer</span>
                                 </h4>
                                 <div class="card__details">
-                                   Details     
+                                    <ul>
+                                        <li>3 day tours</li>
+                                        <li>Up to 30 people</li>
+                                        <li>2 tour guides</li>
+                                        <li>Sleep in cozy hotels</li>
+                                        <li>Difficulty: easy</li>
+                                    </ul>     
                                 </div>
 
                             </div>
