add green button

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -219,8 +219,8 @@
                 </div>
 
                 
-                <div class="u-center-text u-margin-bottom-big"> 
-                        <a href="#" class="btn">Discover all tours</a>
+                <div class="u-center-text u-margin-top-big"> 
+                        <a href="#" class="btn btn--green">Discover all tours</a>
                     </div>
                         
             </section>
