--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -221,8 +221,16 @@
                 
                 <div class="u-center-text u-margin-top-huge"> 
                         <a href="#" class="btn btn--green">Discover all tours</a>
-                    </div>
+                </div>
                         
+            </section>
+
+            <section class="section-stories">
+                <div class="u-center-text u-margin-bottom-big"> 
+                    <h1 class="heading-secondary">
+                        We make people genuinely happy
+                    </h1>
+                </div>
             </section>
 
         </main>
