add story to main

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -231,6 +231,11 @@
                         We make people genuinely happy
                     </h1>
                 </div>
+                <div class="row">
+                    <div class="story">
+                        TEXT
+                    </div>
+                </div>
             </section>
 
         </main>
