content for story

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -233,7 +233,13 @@
                 </div>
                 <div class="row">
                     <div class="story">
-                        TEXT
+                        <figure class="story__shape">
+
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur blan consectetur adipisicing elit. Laboriosam omnis amet</p>
+                        </div>
                     </div>
                 </div>
             </section>
