--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -238,7 +238,7 @@
                         </figure>
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur blan consectetur adipisicing elit. Laboriosam omnis amet</p>
+                            <p>Lorem ipsum dolor sit amet consectetur blan consectetur adipisicing elit. Laboriosam omnis amet. Lorem ipsum dolor sit amet consectetur blan consectetur adipisicing elit. Laboriosam omnis amet</p>
                         </div>
                     </div>
                 </div>
