add video in html

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -226,6 +226,15 @@
             </section>
 
             <section class="section-stories">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <!-- need this to work across different browser, but not ie 8&9 -->
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm"> 
+                            Your browser is not supported!
+
+                    </video>
+                </div>
                 <div class="u-center-text u-margin-bottom-big"> 
                     <h1 class="heading-secondary">
                         We make people genuinely happy
