--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -285,6 +285,10 @@
                                     <input type="text" class="form__input" placeholder="Full Name" id="name" required>
                                     <label for="name" class="form__label">Full Name</label>
                                 </div>
+                                <div class="form__group">
+                                        <input type="email" class="form__input" placeholder="Email" id="email" required>
+                                        <label for="email" class="form__label">Email address</label>
+                                    </div>
                             </form>
                         </div>
                     </div>
