--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -281,6 +281,11 @@
                     <div class="book">
                         <div class="book__form">
                             <form action="#" class="form">
+                                    <div class="u-center-text u-margin-bottom-big"> 
+                                            <h1 class="heading-secondary">
+                                                Start booking now
+                                            </h1>
+                                        </div>
                                 <div class="form__group">
                                     <input type="text" class="form__input" placeholder="Full Name" id="name" required>
                                     <label for="name" class="form__label">Full Name</label>
