--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -281,7 +281,7 @@
                     <div class="book">
                         <div class="book__form">
                             <form action="#" class="form">
-                                    <div class="u-center-text u-margin-bottom-big"> 
+                                    <div class="u-margin-bottom-medium"> 
                                             <h1 class="heading-secondary">
                                                 Start booking now
                                             </h1>
