--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -293,7 +293,17 @@
                                 <div class="form__group">
                                         <input type="email" class="form__input" placeholder="Email" id="email" required>
                                         <label for="email" class="form__label">Email address</label>
+                                </div>
+                                <div class="form__group">
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="small">
+                                        <label for="small" class="form__radio-label">Small tour group</label>
                                     </div>
+                                    <div class="form__radio-group">
+                                            <input type="radio" class="form__radio-input" id="large">
+                                            <label for="large" class="form__radio-label">Large tour group</label>
+                                        </div>
+                                </div>
                             </form>
                         </div>
                     </div>
