button addition in html and fix

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -310,7 +310,9 @@
                                             Large tour group</label>
                                     </div>
                                 </div>
-
+                                <div class="form__group">
+                                    <button class="btn btn--green">Next step &rarr;</button>
+                                </div>
                             </form>
                         </div>
                     </div>
