add utillies precedence

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -295,7 +295,7 @@
                                         <label for="email" class="form__label">Email address</label>
                                 </div>
 
-                                <div class="form__group">
+                                <div class="form__group u-margin-bottom-medium">
                                     <div class="form__radio-group">
                                         <input type="radio" class="form__radio-input" id="small" name="size"> 
                                         <!-- name is required to toggle between the two radios, otherwise both can be clicked -->
