--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -320,6 +320,18 @@
             </section>
 
         </main>
+
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    
+                </div>
+                <div class="col-1-of-2"></div>
+            </div>
+        </footer>
         
         <!-- <section class="grid-test">
             <div class="row">
