--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -327,7 +327,15 @@
             </div>
             <div class="row">
                 <div class="col-1-of-2">
-                    
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-1-of-2"></div>
             </div>
