--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -337,7 +337,13 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-1-of-2"></div>
+                <div class="col-1-of-2">
+                    <p class="footer_copyright">
+                        Built by <a href="#" class="footer__link">Joulay</a> for practice <a href="#" class="footer__link">Advanced CSS & Sass</a>. Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal and commercial use, but NOT to claim it as your own design. A credit to the origin author, Jonas Scmedtmann, is of course highly appreciated.
+
+                    </p>
+
+                </div>
             </div>
         </footer>
         
